# apple_music_dump_xml2html

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
am_xml2html/: __main__.py  converter.py  jinja_filters.py
am_xml2html/templates/: artists.jinja2  index.jinja2  playlists.jinja2  script.jinja2  styles.jinja2  tracks.jinja2
docker/: docker-compose.yml
docker/dockerfiles/: Dockerfile
