[project]
name = "apple-music-dump-xml2html"
version = "1"
authors = [
    {name = "Andrei Musikhin"},
]
description = "Convert XML dump of Apple Music library to pretty HTML"
requires-python = ">=3.13"
readme = "README.md"
default-groups = ["main"]
[dependency-groups]
main = [
    "jinja2>=3.1.6",
]


# --------------- ruff -------------------

[tool.ruff]
target-version = "py313"
cache-dir = "~/.cache/ruff"
line-length = 120
indent-width = 4
show-fixes = true  # Enumerate all fixed violations
extend-exclude = [
    "tmp",
    "*.tmp",
    "*.bkp",
    "*.bkp.*",
    ".venv",
    ".virtualenv",
    "venv",
    "virtualenv",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
docstring-code-format = true  # Enable reformatting of code snippets in docstrings
skip-magic-trailing-comma = false  # Suppress formatting multiline statements as single-line if last argument has comma after it

[tool.ruff.lint]
# All rules described here https://docs.astral.sh/ruff/rules/
extend-select = [
    "ANN",    # flake8-annotations (https://docs.astral.sh/ruff/rules/#flake8-annotations-ann)
    "ARG",    # flake8-unused-arguments (https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg)
    "B",      # flake8-bugbear (https://docs.astral.sh/ruff/rules/#flake8-bugbear-b)
    "C4",     # flake8-comprehensions (https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4)
    "COM",    # flake8-commas (https://docs.astral.sh/ruff/rules/#flake8-commas-com)
    "E",      # pycodestyle errors (https://docs.astral.sh/ruff/rules/#error-e)
    "F",      # pyflakes (https://docs.astral.sh/ruff/rules/#pyflakes-f)
    "G010",   # Checks for uses of logging.warn and logging.Logger.warn
    "G202",   # Checks for redundant exc_info keyword arguments in logging statements
    "I",      # isort (https://docs.astral.sh/ruff/rules/#isort-i)
    "LOG",    # flake8-logging (https://docs.astral.sh/ruff/rules/#flake8-logging-log)
    "N",      # pep8-naming (https://docs.astral.sh/ruff/rules/#pep8-naming-n)
    "RSE",    # flake8-raise (https://docs.astral.sh/ruff/rules/#flake8-raise-rse)
    "T10",    # flake8-debugger (https://docs.astral.sh/ruff/rules/#flake8-debugger-t10)
    "T201",   # flake8-print Checks for `print` statements (https://docs.astral.sh/ruff/rules/print/#print-t201)
    "T203",   # flake8-print Checks for `pprint` statements (https://docs.astral.sh/ruff/rules/p-print/#p-print-t203)
    "TC",     # flake8-type-checking (https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc)
    "TD005",  # Checks that a "TODO" tag contains a description of the issue following the tag itself
    "TD006",  # Checks that a "TODO" tag is properly capitalized (i.e., that the tag is uppercase)
    "TD007",  # Checks that the colon after a "TODO" tag is followed by a space
    "UP",     # pyupgrade (https://docs.astral.sh/ruff/rules/#pyupgrade-up)
    "W",      # pycodestyle warnings (https://docs.astral.sh/ruff/rules/#warning-w)
]
extend-ignore = [
    "ANN002",  # flake8-annotations Allow using `*args` without type annotations
    "ANN003",  # flake8-annotations Allow using `*kwargs` without type annotations
    "ANN204",  # flake8-annotations Allow no type hint for "special" methods (like __init__, __new__, and __call__)
    "ANN401",  # flake8-annotations Stop telling us not to use Any, we need this sometimes, and of course we won't use it all the time
    "C401",    # flake8-comprehensions Stop telling us using {1, 2} if we want to use set([1, 2]) to make it more obvious or consistent
    "C403",    # flake8-comprehensions Stop telling us to rewrite `set([...])` as a set comprehension
    "C405",    # flake8-comprehensions Stop telling us using {1, 2} if we want to use set([1, 2]) to make it more obvious or consistent
    "C408",    # flake8-comprehensions Allow using `dict()`, `list()`, `tuple()`, etc
    "C420",    # flake8-comprehensions Insist on using `dict.fromkeys` method for simple dictionaries
    "COM812",  # flake8-commas Checks for the absence of trailing commas (disabled because of the warning of conflicts)
    "E731",    # pycodestyle errors Allow using lambdas
    "N801",    # pep8-naming Allow us to name classes with `_`
    "N806",    # pep8-naming Variable in function should be lowercase
    "N818",    # pep8-naming Stop telling us to add a word `Error` to our custom exceptions. Maybe I want `Exception` instead
    "UP031",   # pyupgrade Unnecessary offer to change formatting string to `string.format(...)`
]
extend-safe-fixes = [
    "TC004",  # flake8-type-checking Move import {qualified_name} out of type-checking block. Import is used for more than type hinting
]
unfixable = [
    "E501",  # pycodestyle errors Suppress formatting long lines and tell us to do this manually
]

[tool.ruff.lint.isort]  # https://docs.astral.sh/ruff/settings/#lintisort
force-single-line = true  # Forces all imported functions, classes, etc. from one place being reformatted as a separate import line

[tool.ruff.lint.flake8-annotations]  # https://docs.astral.sh/ruff/settings/#lintflake8-annotations
allow-star-arg-any = true  # Allow `*args` and `**kwargs` arguments being untyped

[tool.ruff.lint.flake8-type-checking]  # https://docs.astral.sh/ruff/settings/#lintflake8-type-checking
exempt-modules = [
    "typing",
    "typing_extensions",
]
quote-annotations = true  # Add quotes around type annotations in the code, if an import was moved under `if TYPE_CHECKING:` block

[tool.ruff.lint.flake8-unused-arguments]  # https://docs.astral.sh/ruff/settings/#lintflake8-unused-arguments
ignore-variadic-names = true  # Allow unused variadic arguments in the code, like `*args` and `**kwargs`
